fixes public static in express

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="header-container">
     <!-- assets/img/burger.png. -->
 
-    <img id="hamburger-image" src="/assets/img/burger.png" alt="Burger image.">
+    <img id="hamburger-image" src="public/img/burger.png" alt="Burger image.">
     <header>Eat-Da-Burger!</header>
 </div>
 
